[package]
name = "roux"
version = "2.2.7"
authors = ["Justin Duch <justin@duch.me>"]
edition = "2021"
license = "MIT"
description = "Simple and asyncronous Reddit API wrapper"
readme = "README.md"
documentation = "https://docs.rs/roux"
repository = "https://github.com/halcyonnouveau/roux"
keywords = ["reddit", "api", "async"]
categories = ["authentication", "api-bindings", "network-programming"]
exclude = [".github/*", ".gitignore"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8.4", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15"
tokio-test = "0.4"

[features]
default = ["native-tls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
